# minimal-vulkan-compute-shader

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  m  r
.agents/skills/git-basic-usage/: SKILL.md
Profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerDll.h  Types.h  Value.h
shaders/: shader.hlsl  shader.hlsl.spv
src/: main.cpp
tracy/: CMakeLists.txt
tracy/examples/ToyPathTracer/Windows/: TestCpu.sln  TestCpu.vcxproj.filters
tracy/public/client/: tracy_concurrentqueue.h
